# lung-cancer-detector

LungCancerDetector/: README.md  app.py  config.py  model.py  preprocessing.py  pyproject.toml  replit.nix  test_image_generator.py  utils.py
LungCancerDetector/attached_assets/: Pasted-PS-C-Users-harsh-Documents-code-python-LungCancerDetector-python-u-c-Users-harsh-Documents-code-1738697888067.txt
LungCancerDetector/docs/: TECHNICAL.md  USER_GUIDE.md
